feat: implement cuit app with posts functionality and nativephp integration
- Add Post model with user relationship and migration
- Create CuitController for post management
- Implement NativePHP service provider for desktop app
- Update auth controller and routes for better structure
- Add home view with post creation and listing
- Configure NativePHP settings and dependencies

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "nativephp/electron": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -56,6 +57,10 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "native:dev": [
+            "Composer\\Config::disableProcessTimeout",
+            "npx concurrently -k -c \"#93c5fd,#c4b5fd\" \"php artisan native:serve --no-interaction\" \"npm run dev\" --names=app,vite"
         ]
     },
     "extra": {
